--- a/src/app/life/life.component.html
+++ b/src/app/life/life.component.html
@@ -29,24 +29,23 @@
                     <label>First name</label>
                     <input formControlName = "firstname" class="form-control" aria-label="First name" placeholder="Enter your first name" required/>
                 <div *ngIf="firstname.invalid && (firstname.touched || firstname.dirty)">
-                    <span class="error" *ngIf="firstname.errors?.required"> First Name is required</span>
-                    <span class="error" *ngIf="firstname.errors?.pattern"> Enter Only Characters</span>
+                    <span class="error" *ngIf="firstname.errors?.required"> *First Name is required</span>
+                    <span class="error" *ngIf="firstname.errors?.pattern"> *Enter Only Characters</span>
                 </div>
                 </div>
                 <div class="col">
                     <label>Middle name</label>
                     <input formControlName="middlename" class="form-control"  aria-label="Last name" placeholder="Enter middle last name" required>
                     <div *ngIf="middlename.invalid && (middlename.touched || middlename.dirty)">
-                        <span class="error" *ngIf="middlename.errors?.required"> Middle Name is required</span>
-                        <span class="error" *ngIf="middlename.errors?.pattern"> Enter Only Characters</span>
+                        <span class="error" *ngIf="middlename.errors?.pattern"> *Enter Only Characters</span>
                     </div>
                 </div>
                 <div class="col">
                     <label>Last name</label>
                     <input formControlName="lastname" class="form-control"  aria-label="Last name" placeholder="Enter your last name" required>
                     <div *ngIf="lastname.invalid && (lastname.touched || lastname.dirty)">
-                        <span class="error" *ngIf="lastname.errors?.required"> Last Name is required</span>
-                        <span class="error" *ngIf="lastname.errors?.pattern"> Enter Only Characters</span>
+                        <span class="error" *ngIf="lastname.errors?.required"> *Last Name is required</span>
+                        <span class="error" *ngIf="lastname.errors?.pattern"> *Enter Only Characters</span>
                     </div>
                 </div>
             </div> 
@@ -66,6 +65,7 @@
                     <label>Email</label>
                     <input formControlName="email" class="form-control"  aria-label="email" placeholder="Enter your email" required>
                     <div *ngIf="email.invalid && (email.touched || email.dirty)">
+                        <span class="error" *ngIf="email.errors?.required">*Email required</span>
                     <span class="error" *ngIf="email.errors?.pattern">*Invalid Email Id</span>
                     </div> 
                 </div>
@@ -73,8 +73,8 @@
                     <label>PAN number</label>
                     <input formControlName="pannumber" class="form-control"  aria-label="pan" placeholder="Enter your PAN number" required>
                     <div *ngIf="pannumber.invalid && (pannumber.touched || pannumber.dirty)">
-                        <span class="error" *ngIf="pannumber.errors?.required"> Pan is required</span>
-                        <span class="error" *ngIf="pannumber.errors?.pattern"> Invalid Pan</span>
+                        <span class="error" *ngIf="pannumber.errors?.required"> *Pan is required</span>
+                        <span class="error" *ngIf="pannumber.errors?.pattern"> *Invalid Pan</span>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,11 @@
                 <div class="row g-3">
                     <div class="col">
                         <label>Address</label>
-                        <input type="text" class="form-control" aria-label="address" placeholder="Enter full address" required/>
+                        <input formControlName="address" class="form-control" aria-label="address" placeholder="Enter full address" required/>
+                        <div *ngIf="address.invalid && (address.touched || address.dirty)">
+                            <span class="error" *ngIf="address.errors?.required"> *Address is required</span>
+                        </div>
+
                     </div>
                     <div class="col">
                         <label>Zip code</label>
@@ -173,9 +177,8 @@
                     <input type="text" class="form-control" aria-label="zip" placeholder="Enter your Occupation" required/>
                     </div>
                     <div class="col">
-                        <label>Annual Income</label>
+                        <label>Annual Income in Lacs</label>
                     <input formControlName="income" class="form-control"  placeholder="In Lacs" required/>
-
                     <div *ngIf="income.invalid && (income.touched || income.dirty)">
                         <span class="error" *ngIf="income.errors?.required"> *Income is required</span>
                         <span class="error" *ngIf="income.errors?.pattern"> *Only Numbers are allowed</span>
