checked all radio to no

--- a/src/app/dental-vision/dental-vision.component.html
+++ b/src/app/dental-vision/dental-vision.component.html
@@ -226,7 +226,7 @@
                 <p>Are you planning of cancelling any existing life insurance?</p>
                   <input type="radio"  name="radio1" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio1" value="NO">
+                  <input type="radio"  name="radio1" value="NO" checked>
                   <label for="css">NO</label>
             </div>
             </div>
@@ -235,7 +235,7 @@
                 <p>Do you have group life insurance through work?</p>
                   <input type="radio"  name="radio2" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio" name="radio2" value="NO">
+                  <input type="radio" name="radio2" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                 <p>Do you Consume Tobacco or Alcohol?</p>
                   <input type="radio"  name="radio3" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio3" value="NO">
+                  <input type="radio"  name="radio3" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -254,7 +254,7 @@
                 <p>Any Major Oral Operation in Past?</p>
                   <input type="radio"  name="radio4" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio4" value="NO">
+                  <input type="radio"  name="radio4" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -274,7 +274,7 @@
                 <p>Have/Had cavity any time Or any ungrown teeth? </p>
                   <input type="radio"  name="radio5" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio5" value="NO">
+                  <input type="radio"  name="radio5" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -286,7 +286,7 @@
                 <p>Are you wearing glasses?</p>
                   <input type="radio"  name="radio6" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio6" value="NO">
+                  <input type="radio"  name="radio6" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -297,7 +297,7 @@
                 <p>Do you Have Cataract or any other Eye Disease?</p>
                   <input type="radio"  name="radio7" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio7" value="NO">
+                  <input type="radio"  name="radio7" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -309,7 +309,7 @@
                 <p>Have you ever undergone any Eyes Operation or intend to undergo?</p>
                   <input type="radio"  name="radio8" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio8" value="NO">
+                  <input type="radio"  name="radio8" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
