--- a/src/app/dental/dental.component.html
+++ b/src/app/dental/dental.component.html
@@ -222,7 +222,7 @@
                 <p>Are you planning on cancelling any existing life insurance?</p>
                   <input type="radio" name="radio1" value="YES" >
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio1" value="NO">
+                  <input type="radio"  name="radio1" value="NO" checked>
                   <label for="css">NO</label>
             </div>
             </div>
@@ -231,7 +231,7 @@
                 <p>Do you have group life insurance through work?</p>
                   <input type="radio" id="yes1" name="radio2" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio" id="no1" name="radio2" value="NO">
+                  <input type="radio" id="no1" name="radio2" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -240,7 +240,7 @@
                 <p>Do you consume Tobacco Or Alcohol Or do Smoking? </p>
                   <input type="radio"  name="radio3" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio3" value="NO">
+                  <input type="radio"  name="radio3" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
