--- a/src/app/life/life.component.html
+++ b/src/app/life/life.component.html
@@ -224,7 +224,7 @@
                 <p>Are you planning on cancelling any existing life insurance?</p>
                   <input type="radio"  name="radio1" value="YES" >
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio1" value="NO">
+                  <input type="radio"  name="radio1" value="NO" checked>
                   <label for="css">NO</label>
             </div>
             </div>
@@ -233,7 +233,7 @@
                 <p>Do you have group life insurance through work?</p>
                   <input type="radio"  name="radio2" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio2" value="NO">
+                  <input type="radio"  name="radio2" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -242,7 +242,7 @@
                 <p>Do you consume Tobacco Or Alcohol? </p>
                   <input type="radio"  name="radio3" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio3" value="NO">
+                  <input type="radio"  name="radio3" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                 <p>Are You HIV Positive?</p>
                   <input type="radio"  name="radio4" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio4" value="NO">
+                  <input type="radio"  name="radio4" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
@@ -261,7 +261,7 @@
                 <p>Do you Have any Lung Disease Or Heart Desease?</p>
                   <input type="radio"  name="radio5" value="YES">
                   <label for="html">YES</label>
-                  <input type="radio"  name="radio5" value="NO">
+                  <input type="radio"  name="radio5" value="NO" checked>
                   <label for="css">NO</label>
                 </div>
             </div>
