--- a/src/app/adlogin/adlogin.component.html
+++ b/src/app/adlogin/adlogin.component.html
@@ -45,8 +45,7 @@
                           <p>{{msg}}</p>
                           <div class="form-outline flex-fill mb-0">
                             <label class="form-label" for="form3Example3c">Your Email</label>
-                            <input  name="email" type="email" id="form3" class="form-control" placeholder="Enter your email" required="required" #email=ngModel [(ngModel)]="admin.email"[class.is.invalid]="email.invalid && email.touched" pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"/>
-                            <small class="text-danger" [class.d-none]="email.valid || email.untouched" >emailId is required field</small>
+                            <input  name="email" type="email" id="form3" class="form-control" placeholder="Enter your email" required="required" #email=ngModel [(ngModel)]="admin.adminId" />
                              </div>
                         </div>
       
