--- a/src/app/uwlogin/uwlogin.component.html
+++ b/src/app/uwlogin/uwlogin.component.html
@@ -43,7 +43,7 @@
                           <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
                             <label class="form-label" for="form3Example3c">Your Userid</label>
-                            <input  name="email" type="email" id="form3" class="form-control" placeholder="Enter your UserId" required="required" #userid="ngModel" [(ngModel)]="uwriter.userid" userid="ngModel"/>
+                            <input  name="email" type="email" id="form3" class="form-control" placeholder="Enter your UserId" required="required" #userid="ngModel" [(ngModel)]="uwriter.writerId"  />
                              </div>
                         </div>
       
@@ -51,7 +51,7 @@
                           <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
                             <label class="form-label" for="form3Exam">Password</label>
-                            <input name="password" type="password" id="form3Example4c" class="form-control" placeholder="Enter your password" required="required" #password="ngModel" [(ngModel)]="uwriter.password" password="ngModel"/>
+                            <input name="password" type="password" id="form3Example4c" class="form-control" placeholder="Enter your password" required="required" #password="ngModel" [(ngModel)]="uwriter.password" />
                             
                           </div>
                         </div>
