--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -50,7 +50,7 @@
 
 
 
-                <form #Registerform="ngForm" (ngSubmit)="registerUser()" class="mx-1 mx-md-4">
+                <form #Registerform="ngForm" (ngSubmit)="registerUser()" [formGroup]="SignupForm" class="mx-1 mx-md-4">
 
                   <small class="text-danger">{{msg}}</small>
 
@@ -58,8 +58,11 @@
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example1c">First Name</label>
-                      <input type="text" id="form3Example1" class="form-control" placeholder="Enter your firstname" required="required" [(ngModel)]="user.firstName" #firstname="ngModel" [class.is.invalid]="firstname.invalid && firstname.touched"/>
-                      <small class="text-danger" [class.d-none]="firstname.valid || firstname.untouched" >firstname is required field</small>                
+                      <input formControlName = "firstname" class="form-control" aria-label="First name" placeholder="Enter your first name" required required [(ngModel)] = "user.firstName"/>
+                      <div *ngIf="firstname.invalid && (firstname.touched || firstname.dirty)">
+                          <span class="error" *ngIf="firstname.errors?.required"> *First Name is required</span>
+                          <span class="error" *ngIf="firstname.errors?.pattern"> *Enter Only Characters</span>
+                      </div>
                     </div>
                   </div>
 
@@ -67,8 +70,11 @@
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example1c">Last Name</label>
-                      <input type="text" id="form3Example2" class="form-control" placeholder="Enter your lastname" required="required" [(ngModel)]="user.lastName" #lastname="ngModel" [class.is.invalid]="lastname.invalid && lastname.touched"/>
-                      <small class="text-danger" [class.d-none]="lastname.valid || lastname.untouched" >lastname is required field</small>                
+                      <input formControlName="lastname" class="form-control"  aria-label="Last name" placeholder="Enter your last name" required required [(ngModel)] = "user.lastName"/>
+                      <div *ngIf="lastname.invalid && (lastname.touched || lastname.dirty)">
+                          <span class="error" *ngIf="lastname.errors?.required"> *Last Name is required</span>
+                          <span class="error" *ngIf="lastname.errors?.pattern"> *Enter Only Characters</span>
+                      </div> 
                     </div>
                   </div>
 
@@ -77,9 +83,11 @@
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example3c">Your Email</label>
-                      <input type="email" id="form3Example" name="email" class="form-control" placeholder="Enter your email" required #email="ngModel" [(ngModel)]="user.emailId" [class.is.invalid]="email.invalid && email.touched" pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"/>
-                      <small class="text-danger" [class.d-none]="email.valid || email.untouched" >emailId is required field</small>
-                    
+                      <input formControlName="email" class="form-control"  aria-label="email" placeholder="Enter your email" required required [(ngModel)] = "user.emailId" />
+                    <div *ngIf="email.invalid && (email.touched || email.dirty)">
+                        <span class="error" *ngIf="email.errors?.required">*Email required</span>
+                    <span class="error" *ngIf="email.errors?.pattern">*Invalid Email Id</span>
+                    </div> 
                     </div>
                   </div>
 
@@ -87,8 +95,14 @@
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example4c">Password</label>
-                      <input type="password" id="form3Example4" class="form-control" placeholder="Enter your password" name="password" required="required" #password="ngModel"  [(ngModel)]="user.password"/>
-                      
+                      <input formControlName="password" class="form-control" aria-label="adhar" type="password" placeholder="Enter your password" required required [(ngModel)] = "user.password"/>
+                    <div *ngIf="password.invalid && (password.touched || password.dirty)">
+                        <span class="error" *ngIf="password.errors?.required"> *password is required</span>
+                        <span class="error" *ngIf="password.errors?.pattern">  *Only numbers Characters @#! are allowed</span>
+                        <span class="error" *ngIf="password.errors?.minlength"> *password should be more than 8 Characters</span>
+                        <span class="error" *ngIf="password.errors?.maxlength">*password should be less than 20 Characters</span>
+                        
+                    </div>
                     </div>
                   </div>
 
@@ -96,8 +110,12 @@
                     <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example4cd"> Confirm password</label>
-                      <input type="password" id="form3Example4c" class="form-control" placeholder="Confirm password" name="cpassword" required="required" #cpassword="ngModel" [(ngModel)]="user.password"/>
-                      
+                      <input formControlName="cpassword" class="form-control" aria-label="adhar" type="password" placeholder="Confirm password" required  />
+                      <div *ngIf="cpassword.invalid && (cpassword.touched || cpassword.dirty)">
+                          <span class="error" *ngIf="cpassword.errors?.required"> *password is required</span>
+                          <span class="error" *ngIf="cpassword.errors?.MustMatch">  *Password didn't matched</span>
+                          
+                      </div>
                     </div>
                   </div>
 
